Adding sensor for current temprature

--- a/ac.example.yaml
+++ b/ac.example.yaml
@@ -67,6 +67,10 @@ climate:
         supported: true
         switch:
           name: NanoeX
+      current_temperature:
+        supported: true
+        sensor:
+          name: Current Temperature
       outside_temperature:
         supported: false
       current_power_consumption:
